--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -2,18 +2,20 @@
     <h2>Log In</h2>
     {{!-- *may* need to change form action to another endpoint --}}
     <form id="login-form" method="POST" action="/login"> 
-        <div class="form-row">
+        <div class="form-row-spaced">
             <label for="email-input">Email address</label>
             <input id="email-input" placeholder="Email address" type="email" required>
         </div>
-        <div class="form-row">
+        <div class="form-row-spaced">
             <label for="password-input">Password</label>
             <input id="password-input" placeholder="Password" type="password" required>
         </div>
-        <div class="form-row">
+        <div class="form-row-centered">
             <button type="submit" class="submit-btn">Log In</button>
-            <a href="#">Not registered yet? Click here to sign up</a>
             {{!-- Need to decide register link --}}
+        </div>
+        <div class="form-row-centered">
+            <a href="#">Not registered yet? Click here to sign up</a>
         </div>
     </form>
 </section>
