Centered signup form

--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -17,10 +17,12 @@
                 <label for="password-confirm">Confirm password</label>
                 <input id="password-confirm" placeholder="Password" type="password" required>
         </div>
-        <div class="form-row">
+        <div class="form-row-centered">
             <button type="submit" class="submit-btn">Sign Up</button>
             {{!-- Need to decide register link --}}
         </div>
-        <a href="/login">Already registered? Click here to log in</a>
+        <div class="form-row-centered">
+                <a href="/login">Already registered? Click here to log in</a>
+        </div>
     </form>
 </section>
