--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,5 +1,5 @@
 <section>
-  <h1>PLAY WITH MY EMOTIONS</h1>
+  <h1>EMOTIONS</h1>
   <p>do you want to play a game</p>
   <p> ( ͡° ͜ʖ ͡°) </p>
   {{!-- <img src="/imgs/nicolas-cage-wallpapers-27174-6867611.jpg"> --}}
