--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -4,11 +4,11 @@
     <form id="login-form" method="POST" action="/login">
         <div class="form-row-spaced">
             <label for="email-input">Email address</label>
-            <input id="email-input" placeholder="Email address" type="email" required>
+            <input id="email-input" placeholder="Email address" type="email" name="email" required>
         </div>
         <div class="form-row-spaced">
             <label for="password-input">Password</label>
-            <input id="password-input" placeholder="Password" type="password" required>
+            <input id="password-input" placeholder="Password" type="password" name="password" required>
         </div>
         <div class="form-row-centered">
             <button type="submit" class="submit-btn">Log In</button>
