--- a/src/views/signup.hbs
+++ b/src/views/signup.hbs
@@ -3,19 +3,19 @@
     <form id="signup-form" method="POST" action="/signup">
         <div class="form-row-spaced">
                 <label for="email-input">Email address</label>
-                <input id="email-input" placeholder="Email address" type="email" required>
+                <input id="email-input" placeholder="Email address" type="email" name="email" required>
         </div>
         <div class="form-row-spaced">
                 <label for="name-input">Name</label>
-                <input id="name-input" placeholder="Firstname Lastname" type="text" required>
+                <input id="name-input" placeholder="Firstname Lastname" type="text" name="name" required>
         </div>
         <div class="form-row-spaced">
                 <label for="password-input">Password</label>
-                <input id="password-input" placeholder="Password" type="password" required>
+                <input id="password-input" placeholder="Password" type="password" name="password" required>
         </div>
         <div class="form-row-spaced">
                 <label for="password-confirm">Confirm password</label>
-                <input id="password-confirm" placeholder="Password" type="password" required>
+                <input id="password-confirm" placeholder="Password" type="password" name="confirm" required>
         </div>
         <div class="form-row-centered">
             <button type="submit" class="submit-btn">Sign Up</button>
