--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,8 +12,9 @@
   margin: 0;
 }
 
+
 body {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100vw;
   background: var(--main-bg-color);
   color: var(--main-text-color);
@@ -43,6 +44,16 @@ p{
   font-weight: 400;
   font-size: 1.2rem;
   line-height: 2rem;
+}
+
+/* IDs */
+
+#image-preview {
+  max-height: 100%;
+  width: 30vw;
+  margin: auto;
+  border: 1px solid black;
+
 }
 
 /* CLASSES */
@@ -118,6 +129,10 @@ input {
   background: transparent;
   width: 50%;
   font-size: 2rem;
+}
+
+figure {
+  width: 100%;
 }
 
 button {
