image input required

--- a/src/views/upload.hbs
+++ b/src/views/upload.hbs
@@ -11,7 +11,7 @@
     <form action="/upload" method="POST">
     <!-- may need to update action -->
 
-      <input id="file-upload" type="file" name="photo" accept="image/jpeg"></input>
+      <input id="file-upload" type="file" name="photo" accept="image/jpeg" required>
     <!-- or image/* or image/x-png,image/gif,image/jpeg -->
       <button type="submit">Upload</button>
     </form>
