--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,6 +1,12 @@
-<section>
-  <h1>EMOTIONS</h1>
-  <p>do you want to play a game</p>
-  <p> ( ͡° ͜ʖ ͡°) </p>
-  {{!-- <img src="/imgs/nicolas-cage-wallpapers-27174-6867611.jpg"> --}}
+<section class="formpage">
+  <div class="home-container">
+    <h1>EMOTIONS</h1>
+    <h2>do you want to play a game?</h2>
+    <h2> ( ͡° ͜ʖ ͡°) </h2>
+    {{!-- <img src="/imgs/nicolas-cage-wallpapers-27174-6867611.jpg"> --}}
+    <div class="form-row-centered">
+      <button onclick="location.href='/login'">yes</button>
+      <button id="no-btn" onclick="location.href='/NOYOUHAVETOPLAYAGAME';"><span id="no-span">no</span></button>
+    </div>
+  </div>
 </section>
