Update 404 text size

--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -1,4 +1,5 @@
 <section class="errorpage">
-  <p>{{statusCode}}.</p>
-  <p><span>{{errorMessage}}</span></p>
+  <h1>{{statusCode}}.</h1>
+  <br>
+  <h1><span>{{errorMessage}}</span></h1>
 </section>
