--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -42,6 +42,12 @@ h2 {
   color: var(--main-text-color);
 }
 
+h3 {
+  font-size: 4rem;
+  color: white;
+  text-shadow: -2px 2px 2px black;
+}
+
 p{
   font-family: "Chelsea";
   font-weight: 400;
