--- a/src/views/error.hbs
+++ b/src/views/error.hbs
@@ -1,5 +1,3 @@
 <section class="errorpage">
-  <h1>{{statusCode}}.</h1>
-  <br>
-  <h1><span>{{errorMessage}}</span></h1>
+  <h3>{{statusCode}}, {{errorMessage}}</h3>
 </section>
